syntax = "proto3";

package tokens;

option go_package = "github.com/dehwyy/mafuyu/libs/grpc/gen/api";

import "api/general.proto";

service TokensRpc {
  rpc GenerateTokenPair(GenerateTokenPairRequest) returns (GenerateTokenPairResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc ClearTokens(ClearTokensRequest) returns (general.IsOkResponse);
  rpc SaveTokens(SaveTokensRequest) returns (general.IsOkResponse);
  rpc RefreshTheToken(RefreshTheTokenRequest) returns (RefreshTheTokenResponse);
}

message GenerateTokenPairRequest {
  string user_id = 1;
}

message GenerateTokenPairResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message ValidateTokenRequest {
  string access_token = 1;
  optional string provider = 2;
}

message ValidateTokenResponse {
  optional string user_id = 1;
}

message ClearTokensRequest {
  string user_id = 1;
  optional string access_token = 2; // If access_token is provided -> this token will be deleted too.
}

message SaveTokensRequest {
  string user_id = 1;
  string access_token = 2;
  optional string refresh_token = 3;
  optional string provider = 4;
}

message RefreshTheTokenRequest {
  string refresh_token = 1;
}

message RefreshTheTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}